Refactor cart and order services to integrate cart data.