@@ -4,24 +4,32 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.CollectionUtils;
 import org.store.app.dto.OrderDTO;
+import org.store.app.dto.OrderItemDTO;
 import org.store.app.dto.OrderResponseCreatedDTO;
+import org.store.app.dto.ProductInfoDTO;
 import org.store.app.enums.AddressType;
+import org.store.app.enums.CartStatus;
 import org.store.app.enums.OrderStatus;
 import org.store.app.exception.ResourceNotFoundException;
+import org.store.app.mapper.OrderItemMapper;
 import org.store.app.mapper.OrderMapper;
+import org.store.app.model.Cart;
 import org.store.app.model.Customer;
 import org.store.app.model.Order;
 import org.store.app.model.OrderItem;
+import org.store.app.projection.ProductInfoProjection;
 import org.store.app.repository.CustomerRepository;
 import org.store.app.repository.OrderRepository;
+import org.store.app.service.CartService;
 import org.store.app.service.CustomerAddressService;
 import org.store.app.service.EmailService;
 import org.store.app.service.OrderService;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 
@@ -35,19 +43,48 @@ public class OrderServiceImpl implements OrderService {
     private final CustomerRepository customerRepository;
     private final CustomerAddressService customerAddressService;
     private final EmailService emailService;
+    private final CartService cartService;
+    private final OrderItemMapper orderItemMapper;
 
 
     @Override
     @Transactional(readOnly = true)
-    public List<OrderDTO> getAllOrdersForCurrentCustomer(Long customerId) {
-        List<Order> orders = orderRepository.findByCustomerId(customerId);
-        return orders.stream().map(orderMapper::toDto).collect(Collectors.toList());
+    public List<OrderDTO> getOrdersByCustomerAndStatus(Long customerId, OrderStatus status) {
+        List<Order> orders = orderRepository.findByCustomerIdAndStatus(customerId, status);
+
+        List<OrderDTO> ordersDTOS = orders.stream().map(orderMapper::toDto).toList();
+
+        Set<Long> productIds = ordersDTOS.stream()
+                .flatMap(orderDTO -> orderDTO.getItems().stream())
+                .map(OrderItemDTO::getProductId)
+                .collect(Collectors.toSet());
+
+        Map<Long, ProductInfoDTO> productInfoMap = orderRepository.findProductInfosByIds(productIds)
+                .stream()
+                .collect(Collectors.toMap(
+                        ProductInfoProjection::getProductId,
+                        p -> new ProductInfoDTO(p.getName(), p.getDescription(), p.getImageUrl()),
+                        (existing, replacement) -> existing // في حالة وجود نفس المفتاح، نحتفظ بالقيمة الأولى
+                ));
+
+        for (OrderDTO orderDTO : ordersDTOS) {
+            for (OrderItemDTO item : orderDTO.getItems()) {
+                ProductInfoDTO productInfoDTO = productInfoMap.get(item.getProductId());
+                if (productInfoDTO == null) {
+                    throw new ResourceNotFoundException("Product not found with id: " + item.getProductId());
+                }
+                item.setProductInfo(productInfoDTO);
+            }
+        }
+        log.info("Found {} orders for customer id: {}", ordersDTOS.size(), customerId);
+        return ordersDTOS;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public OrderResponseCreatedDTO createOrder(OrderDTO orderDTO, Long customerId) {
-        Customer customer = customerRepository.findById(customerId).orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + customerId));
+        Customer customer = customerRepository.findById(customerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + customerId));
 
         if (orderDTO.getShippingAddressId() == null) {
             Long defaultShippingId = customerAddressService.getDefaultAddressId(customerId, AddressType.SHIPPING);
@@ -66,23 +103,20 @@ public class OrderServiceImpl implements OrderService {
         Order order = orderMapper.toEntity(orderDTO);
         order.setCustomer(customer);
 
-        if (!CollectionUtils.isEmpty(order.getItems())) {
-            order.getItems().forEach(item -> {
-                item.setOrder(order);
-                if (item.getUnitPrice() != null && item.getQuantity() != null) {
-                    BigDecimal totalPrice = item.getUnitPrice().multiply(BigDecimal.valueOf(item.getQuantity()));
-                    item.setTotalPrice(totalPrice);
-                } else {
-                    item.setTotalPrice(BigDecimal.ZERO); // fallback
-                }
-            });
+        Cart cart = cartService.getCartById(orderDTO.getCartId(), CartStatus.ACTIVE, customer.getId());
 
-            BigDecimal totalAmount = order.getItems().stream().map(OrderItem::getTotalPrice).reduce(BigDecimal.ZERO, BigDecimal::add);
+        List<OrderItem> orderItems = cart.getItems().stream()
+                .map(cartItem -> {
+                    OrderItem item = orderItemMapper.toEntityFromCartItem(cartItem);
+                    item.setOrder(order);
+                    return item;
+                }).toList();
+        order.setItems(orderItems);
 
-            order.setTotalAmount(totalAmount);
-        } else {
-            order.setTotalAmount(BigDecimal.ZERO);
-        }
+        BigDecimal totalAmount = orderItems.stream()
+                .map(OrderItem::getTotalPrice)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+        order.setTotalAmount(totalAmount);
 
         order.setStatus(OrderStatus.PENDING);
         Order savedOrder = orderRepository.save(order);
@@ -99,7 +133,7 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    public void sendOrderConfirmationEmail(Long orderId,String currency) {
+    public void sendOrderConfirmationEmail(Long orderId, String currency) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found: " + orderId));
 
